nmean, std function template

--- a/main.ipynb
+++ b/main.ipynb
@@ -28,6 +28,43 @@
     "print('allocated CUDA memory: ',torch.cuda.memory_allocated())\n",
     "print('cached CUDA memory: ',torch.cuda.memory_cached())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "now = datetime.now()\n",
+    "dt_string = now.strftime(\"%d_%m_%Y\")\n",
+    "# path to save pytorch models during training\n",
+    "PATH = f'/notebooks/logs/model_{dt_string}.pt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Template of function, modify for proper use\n",
+    "# for calcualting mean and std od dataset\n",
+    "def get_mean_and_std(dataset):\n",
+    "    channels_sum, channels_squared_sum, num_batches = 0, 0, 0\n",
+    "    for data, _ in tqdm(dataset):\n",
+    "        # Mean over batch, height and width, but not over the channels\n",
+    "        channels_sum += torch.mean(data, dim=[1,2])\n",
+    "        channels_squared_sum += torch.mean(data**2, dim=[1,2])\n",
+    "        num_batches += 1\n",
+    "\n",
+    "    mean = channels_sum / num_batches\n",
+    "\n",
+    "    # std = sqrt(E[X^2] - (E[X])^2)\n",
+    "    std = (channels_squared_sum / num_batches - mean ** 2) ** 0.5\n",
+    "\n",
+    "    return mean, std"
+   ]
   }
  ],
  "metadata": {
