--- a/main.ipynb
+++ b/main.ipynb
@@ -24,9 +24,18 @@
     "# Libraries for dataloader\n",
     "from os import listdir\n",
     "from os.path import isfile, join\n",
-    "#Checking whether GPU RAM is empty\n",
-    "print('allocated CUDA memory: ',torch.cuda.memory_allocated())\n",
-    "print('cached CUDA memory: ',torch.cuda.memory_cached())\n"
+    "\n",
+    "\n",
+    "#CUDA configuration\n",
+    "torch.cuda.empty_cache()\n",
+    "# Set device\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f'using: {device}')\n",
+    "torch.backends.cudnn.benchmark = True #let cudnn chose the most efficient way of calculating Convolutions\n",
+    "if device == 'cuda':\n",
+    "        #Checking whether GPU RAM is empty\n",
+    "        print('allocated CUDA memory: ',torch.cuda.memory_allocated())\n",
+    "        print('cached CUDA memory: ',torch.cuda.memory_cached())\n"
    ]
   },
   {
