Added Network prototype

--- a/main.ipynb
+++ b/main.ipynb
@@ -74,6 +74,40 @@
     "\n",
     "    return mean, std"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Network prototype\n",
+    "class Network(nn.Module):\n",
+    "    def __init__(self, in_c, n_classes):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.block1 = nn.Sequential(\n",
+    "            nn.Linear()\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "              \n",
+    "        #self.decoder = nn.Sequential(\n",
+    "        #    nn.Linear(32 * 28 * 28, 1024),\n",
+    "        #    nn.Sigmoid(),\n",
+    "        #    nn.Linear(1024, n_classes)\n",
+    "        #)\n",
+    "\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.block1(x)\n",
+    "\n",
+    "        x = x.view(x.size(0), -1) # flat\n",
+    "        \n",
+    "        #x = self.decoder(x)\n",
+    "        \n",
+    "        return x"
+   ]
   }
  ],
  "metadata": {
