--- a/spaceship-titanic/Reading_files.ipynb
+++ b/spaceship-titanic/Reading_files.ipynb
@@ -184,9 +184,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xtrain=df_train.iloc[:,1:12].values  #I don't include passengers names and ids in the training data\n",
+    "xtrain=df_train.iloc[:,0:13].values  \n",
     "ytrain=df_train.iloc[:,13].values\n",
-    "xtest=df_xtest.iloc[:,1:12].values\n",
+    "xtest=df_xtest.iloc[:,0:13].values\n",
     "ytest=df_ytest.iloc[:,1].values\n",
     "\n",
     "for i in [4,6,7,8,9,10]:  #normalizing numeric values by their biggest value\n",
@@ -218,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov  4 2022, 13:42:51) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
