--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using: cpu\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "import time\n",
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +57,143 @@
     "dt_string = now.strftime(\"%d_%m_%Y\")\n",
     "# path to save pytorch models during training\n",
     "PATH = f'/notebooks/logs/model_{dt_string}.pt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>HomePlanet</th>\n",
+       "      <th>CryoSleep</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>VIP</th>\n",
+       "      <th>RoomService</th>\n",
+       "      <th>FoodCourt</th>\n",
+       "      <th>ShoppingMall</th>\n",
+       "      <th>Spa</th>\n",
+       "      <th>VRDeck</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Transported</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0001_01</td>\n",
+       "      <td>Europa</td>\n",
+       "      <td>False</td>\n",
+       "      <td>B/0/P</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Maham Ofracculy</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0002_01</td>\n",
+       "      <td>Earth</td>\n",
+       "      <td>False</td>\n",
+       "      <td>F/0/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>549.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>Juanna Vines</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0003_01</td>\n",
+       "      <td>Europa</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A/0/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>3576.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6715.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>Altark Susent</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  PassengerId HomePlanet CryoSleep  Cabin  Destination   Age    VIP  \\\n",
+       "0     0001_01     Europa     False  B/0/P  TRAPPIST-1e  39.0  False   \n",
+       "1     0002_01      Earth     False  F/0/S  TRAPPIST-1e  24.0  False   \n",
+       "2     0003_01     Europa     False  A/0/S  TRAPPIST-1e  58.0   True   \n",
+       "\n",
+       "   RoomService  FoodCourt  ShoppingMall     Spa  VRDeck             Name  \\\n",
+       "0          0.0        0.0           0.0     0.0     0.0  Maham Ofracculy   \n",
+       "1        109.0        9.0          25.0   549.0    44.0     Juanna Vines   \n",
+       "2         43.0     3576.0           0.0  6715.0    49.0    Altark Susent   \n",
+       "\n",
+       "   Transported  \n",
+       "0        False  \n",
+       "1         True  \n",
+       "2        False  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train=pd.read_csv('spaceship-titanic/train.csv')\n",
+    "df_xtest=pd.read_csv('spaceship-titanic/test.csv')\n",
+    "df_ytest=pd.read_csv('spaceship-titanic/sample_submission.csv')\n",
+    "\n",
+    "xtrain=df_train.iloc[:,0:13].values  \n",
+    "ytrain=df_train.iloc[:,13].values\n",
+    "xtest=df_xtest.iloc[:,0:13].values\n",
+    "ytest=df_ytest.iloc[:,1].values\n",
+    "\n",
+    "for i in [5,7,8,9,10,11]:  #normalizing numeric values by their biggest value\n",
+    "    xtest[:,i] = xtest[:,i]/max(xtrain[:,i])\n",
+    "    xtrain[:,i] = xtrain[:,i]/max(xtrain[:,i])\n",
+    "\n",
+    "df_train[0:3]"
    ]
   },
   {
@@ -112,18 +257,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML_M1",
+   "display_name": "ML",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.15 (main, Nov  4 2022, 11:12:28) \n[Clang 12.0.0 ]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ced241d5e25316607f69b17bccf9c4f21b200991effa1e275b2556613ad6a8df"
+    "hash": "444de99622c186727863be987e16d2f71f919ca048dbd0162ded63cc1c2ff888"
    }
   }
  },
