--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "2        False  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,12 +193,12 @@
     "    xtest[:,i] = xtest[:,i]/max(xtrain[:,i])\n",
     "    xtrain[:,i] = xtrain[:,i]/max(xtrain[:,i])\n",
     "\n",
-    "df_train[0:3]"
+    "df_train[0:3]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,42 +222,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (640636866.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [6], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    nn.BatchNorm2d(32),\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Network prototype\n",
-    "class Network(nn.Module):\n",
-    "    def __init__(self, in_c, n_classes):\n",
-    "        super().__init__()\n",
-    "        \n",
-    "        self.block1 = nn.Sequential(\n",
-    "            nn.Linear()\n",
-    "            nn.BatchNorm2d(32),\n",
-    "            nn.ReLU()\n",
-    "        )\n",
-    "              \n",
-    "        #self.decoder = nn.Sequential(\n",
-    "        #    nn.Linear(32 * 28 * 28, 1024),\n",
-    "        #    nn.Sigmoid(),\n",
-    "        #    nn.Linear(1024, n_classes)\n",
-    "        #)\n",
     "\n",
-    "        \n",
+    "\n",
+    "class model_block(torch.nn.Module):\n",
+    "    def __init__(self, D_in, H, D_out):\n",
+    "        super(model_block, self).__init__()\n",
+    "        self.linear1 = torch.nn.Linear(D_in, H)\n",
+    "        self.linear2 = torch.nn.Linear(H, D_out)\n",
     "    def forward(self, x):\n",
-    "        x = self.block1(x)\n",
+    "        activation = self.linear1(x)\n",
+    "        activation = F.relu(activation)\n",
+    "        activation = self.linear2(x)\n",
+    "        activation = F.relu(activation)\n",
+    "        return activation\n",
     "\n",
-    "        x = x.view(x.size(0), -1) # flat\n",
+    "class Net(torch.nn.Module):\n",
+    "    def __init__(self, D_in1, H1, D_out1, D_in2, H2, D_out2):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.block1 = model_block(D_in1, H1, D_out1)\n",
+    "        self.block2 = model_block(D_in2, H2, D_out2)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        pred = self.block1(x)\n",
+    "        y_pred = self.block2(pred)\n",
+    "        return y_pred\n",
     "        \n",
-    "        #x = self.decoder(x)\n",
-    "        \n",
-    "        return x"
+    "        return x\n",
+    "\n",
+    "input_num = 4\n",
+    "output_num = 1"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML",
+   "display_name": "ML_M1",
    "language": "python",
    "name": "python3"
   },
@@ -271,12 +284,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov  4 2022, 13:42:51) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "444de99622c186727863be987e16d2f71f919ca048dbd0162ded63cc1c2ff888"
+    "hash": "ced241d5e25316607f69b17bccf9c4f21b200991effa1e275b2556613ad6a8df"
    }
   }
  },
