--- a/main.ipynb
+++ b/main.ipynb
@@ -236,19 +236,17 @@
    ],
    "source": [
     "# Network prototype\n",
-    "\n",
-    "\n",
     "class model_block(torch.nn.Module):\n",
     "    def __init__(self, D_in, H, D_out):\n",
     "        super(model_block, self).__init__()\n",
     "        self.linear1 = torch.nn.Linear(D_in, H)\n",
     "        self.linear2 = torch.nn.Linear(H, D_out)\n",
     "    def forward(self, x):\n",
-    "        activation = self.linear1(x)\n",
-    "        activation = F.relu(activation)\n",
-    "        activation = self.linear2(x)\n",
-    "        activation = F.relu(activation)\n",
-    "        return activation\n",
+    "        y = self.linear1(x)\n",
+    "        y = F.relu(y)\n",
+    "        y = self.linear2(x)\n",
+    "        y = F.relu(y)\n",
+    "        return y\n",
     "\n",
     "class Net(torch.nn.Module):\n",
     "    def __init__(self, D_in1, H1, D_out1, D_in2, H2, D_out2):\n",
@@ -257,11 +255,9 @@
     "        self.block2 = model_block(D_in2, H2, D_out2)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        pred = self.block1(x)\n",
-    "        y_pred = self.block2(pred)\n",
-    "        return y_pred\n",
-    "        \n",
-    "        return x\n",
+    "        y = self.block1(x)\n",
+    "        y = self.block2(y)\n",
+    "        return y\n",
     "\n",
     "input_num = 4\n",
     "output_num = 1"
