--- a/spaceship-titanic/Reading_files.ipynb
+++ b/spaceship-titanic/Reading_files.ipynb
@@ -13,162 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>HomePlanet</th>\n",
-       "      <th>CryoSleep</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Destination</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>VIP</th>\n",
-       "      <th>RoomService</th>\n",
-       "      <th>FoodCourt</th>\n",
-       "      <th>ShoppingMall</th>\n",
-       "      <th>Spa</th>\n",
-       "      <th>VRDeck</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Transported</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0001_01</td>\n",
-       "      <td>Europa</td>\n",
-       "      <td>False</td>\n",
-       "      <td>B/0/P</td>\n",
-       "      <td>TRAPPIST-1e</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Maham Ofracculy</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0002_01</td>\n",
-       "      <td>Earth</td>\n",
-       "      <td>False</td>\n",
-       "      <td>F/0/S</td>\n",
-       "      <td>TRAPPIST-1e</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>109.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>549.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>Juanna Vines</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0003_01</td>\n",
-       "      <td>Europa</td>\n",
-       "      <td>False</td>\n",
-       "      <td>A/0/S</td>\n",
-       "      <td>TRAPPIST-1e</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>3576.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6715.0</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>Altark Susent</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0003_02</td>\n",
-       "      <td>Europa</td>\n",
-       "      <td>False</td>\n",
-       "      <td>A/0/S</td>\n",
-       "      <td>TRAPPIST-1e</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1283.0</td>\n",
-       "      <td>371.0</td>\n",
-       "      <td>3329.0</td>\n",
-       "      <td>193.0</td>\n",
-       "      <td>Solam Susent</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0004_01</td>\n",
-       "      <td>Earth</td>\n",
-       "      <td>False</td>\n",
-       "      <td>F/1/S</td>\n",
-       "      <td>TRAPPIST-1e</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>303.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>151.0</td>\n",
-       "      <td>565.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Willy Santantines</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  PassengerId HomePlanet CryoSleep  Cabin  Destination   Age    VIP  \\\n",
-       "0     0001_01     Europa     False  B/0/P  TRAPPIST-1e  39.0  False   \n",
-       "1     0002_01      Earth     False  F/0/S  TRAPPIST-1e  24.0  False   \n",
-       "2     0003_01     Europa     False  A/0/S  TRAPPIST-1e  58.0   True   \n",
-       "3     0003_02     Europa     False  A/0/S  TRAPPIST-1e  33.0  False   \n",
-       "4     0004_01      Earth     False  F/1/S  TRAPPIST-1e  16.0  False   \n",
-       "\n",
-       "   RoomService  FoodCourt  ShoppingMall     Spa  VRDeck               Name  \\\n",
-       "0          0.0        0.0           0.0     0.0     0.0    Maham Ofracculy   \n",
-       "1        109.0        9.0          25.0   549.0    44.0       Juanna Vines   \n",
-       "2         43.0     3576.0           0.0  6715.0    49.0      Altark Susent   \n",
-       "3          0.0     1283.0         371.0  3329.0   193.0       Solam Susent   \n",
-       "4        303.0       70.0         151.0   565.0     2.0  Willy Santantines   \n",
-       "\n",
-       "   Transported  \n",
-       "0        False  \n",
-       "1         True  \n",
-       "2        False  \n",
-       "3        False  \n",
-       "4         True  "
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "module 'pandas' has no attribute 'heads'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [6], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m df_xtest\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39mtest.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m df_ytest\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39msample_submission.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m pd\u001b[39m.\u001b[39mheads(df_train)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\__init__.py:264\u001b[0m, in \u001b[0;36m__getattr__\u001b[1;34m(name)\u001b[0m\n\u001b[0;32m    260\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39marrays\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msparse\u001b[39;00m \u001b[39mimport\u001b[39;00m SparseArray \u001b[39mas\u001b[39;00m _SparseArray\n\u001b[0;32m    262\u001b[0m     \u001b[39mreturn\u001b[39;00m _SparseArray\n\u001b[1;32m--> 264\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmodule \u001b[39m\u001b[39m'\u001b[39m\u001b[39mpandas\u001b[39m\u001b[39m'\u001b[39m\u001b[39m has no attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'heads'"
+     ]
     }
    ],
    "source": [
@@ -180,9 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'float' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m ytest\u001b[39m=\u001b[39mdf_ytest\u001b[39m.\u001b[39miloc[:,\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mvalues\n\u001b[0;32m      6\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m [\u001b[39m4\u001b[39m,\u001b[39m6\u001b[39m,\u001b[39m7\u001b[39m,\u001b[39m8\u001b[39m,\u001b[39m9\u001b[39m,\u001b[39m10\u001b[39m]:  \u001b[39m#normalizing numeric values by their biggest value\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m     xtest[:,i] \u001b[39m=\u001b[39m xtest[:,i]\u001b[39m/\u001b[39m\u001b[39mmax\u001b[39m(xtrain[:,i])\n\u001b[0;32m      8\u001b[0m     xtrain[:,i] \u001b[39m=\u001b[39m xtrain[:,i]\u001b[39m/\u001b[39m\u001b[39mmax\u001b[39m(xtrain[:,i])\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'float' and 'str'"
+     ]
+    }
+   ],
    "source": [
     "xtrain=df_train.iloc[:,0:13].values  \n",
     "ytrain=df_train.iloc[:,13].values\n",
@@ -204,7 +74,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -218,12 +88,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov  4 2022, 13:42:51) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "444de99622c186727863be987e16d2f71f919ca048dbd0162ded63cc1c2ff888"
+    "hash": "301a17a29b57d3836b7901af1621afd6d2b1f2298b9c7949191147cf2fea93e3"
    }
   }
  },
