--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4         True  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
     "df_train = pd.read_csv('train.csv')\n",
     "df_xtest = pd.read_csv('test.csv')\n",
     "df_ytest = pd.read_csv('sample_submission.csv')\n",
-    "df_train[0: 5]"
+    "df_train[0:5]\n"
    ]
   },
   {
@@ -501,6 +501,149 @@
     "plt.show()\n",
     "\n",
     "# we could also check and plot dependence of \"transported\" with respect to other variables, but come on... it's machine learning, let computer figure "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv('train.csv')\n",
+    "df_xtest = pd.read_csv('test.csv')\n",
+    "df_ytest = pd.read_csv('sample_submission.csv')\n",
+    "\n",
+    "#convert true/false values to 1/0\n",
+    "df_train.iloc[:,13]=1*df_train.iloc[:,13]\n",
+    "df_train.iloc[:,2]=1*df_train.iloc[:,2]\n",
+    "df_train.iloc[:,6]=1*df_train.iloc[:,6]\n",
+    "df_xtest.iloc[:,2]=1*df_xtest.iloc[:,2]\n",
+    "df_xtest.iloc[:,6]=1*df_xtest.iloc[:,6]\n",
+    "df_ytest.iloc[:,1]=1*df_ytest.iloc[:,1]\n",
+    "\n",
+    "#normalize (divide) numeric values by their maximum value\n",
+    "for i in [5,7,8,9,10,11]:  \n",
+    "    df_xtest.iloc[:,i] = df_xtest.iloc[:,i]/max(df_train.iloc[:,i])\n",
+    "    df_train.iloc[:,i] = df_train.iloc[:,i]/max(df_train.iloc[:,i])\n",
+    "\n",
+    "\n",
+    "#Encoding data. We put into this function a list of categories we want to encode (e.g.planet names)\n",
+    "def encoding(sequences, categories):\n",
+    "  results = np.zeros((len(sequences), len(categories))) # Creates an all-zero matrix of shape (len(sequences), len(categories))\n",
+    "  for i, sequence in enumerate(sequences): # Sets specific indices of results to 1\n",
+    "    for j in range(len(categories)):\n",
+    "        if sequence==categories[j]:\n",
+    "            results[i,j]=1\n",
+    "  return np.array(results)\n",
+    "\n",
+    "home_planet_train=encoding(df_train.iloc[:,1],['Europa','Earth','Mars'])\n",
+    "home_planet_test=encoding(df_xtest.iloc[:,1],['Europa','Earth','Mars'])\n",
+    "\n",
+    "destination_train=encoding(df_train.iloc[:,4],['TRAPPIST-1e','PSO J318.5-22','55 Cancri e'])\n",
+    "destination_test=encoding(df_xtest.iloc[:,4],['TRAPPIST-1e','PSO J318.5-22','55 Cancri e'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_6380\\532312657.py:44: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  xtrain=np.array([group_train,group_id_train,home_planet_train,df_train.iloc[:,2].values,deck_train,num_train,side_train,destination_train,df_train.iloc[:,5].values,\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([array([], dtype=float64), array([], dtype=float64),\n",
+       "       array([[1., 0., 0.],\n",
+       "              [0., 1., 0.],\n",
+       "              [1., 0., 0.],\n",
+       "              ...,\n",
+       "              [0., 1., 0.],\n",
+       "              [1., 0., 0.],\n",
+       "              [1., 0., 0.]]),\n",
+       "       array([0, 0, 0, ..., 0, 0, 0], dtype=object),\n",
+       "       array([], dtype=float64), array([], dtype=float64),\n",
+       "       array([], dtype=float64), array([[1., 0., 0.],\n",
+       "                                        [1., 0., 0.],\n",
+       "                                        [1., 0., 0.],\n",
+       "                                        ...,\n",
+       "                                        [1., 0., 0.],\n",
+       "                                        [0., 0., 1.],\n",
+       "                                        [1., 0., 0.]]),\n",
+       "       array([0.49367089, 0.30379747, 0.73417722, ..., 0.32911392, 0.40506329,\n",
+       "              0.55696203])                                                    ,\n",
+       "       array([0, 0, 1, ..., 0, 0, 0], dtype=object),\n",
+       "       array([0.        , 0.00760801, 0.00300133, ..., 0.        , 0.        ,\n",
+       "              0.00879458])                                                    ,\n",
+       "       array([0.        , 0.00030188, 0.11994767, ..., 0.        , 0.03518599,\n",
+       "              0.15724684])                                                    ,\n",
+       "       array([0.        , 0.00106419, 0.        , ..., 0.0796867 , 0.        ,\n",
+       "              0.        ])                                                    ,\n",
+       "       array([0.00000000e+00, 2.45001785e-02, 2.99669761e-01, ...,\n",
+       "              4.46269190e-05, 1.57533024e-02, 0.00000000e+00])    ,\n",
+       "       array([0.        , 0.00182323, 0.00203041, ..., 0.        , 0.13404881,\n",
+       "              0.00049724])                                                    ],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Passenger ID is divided into group number (describes the whole group) and group ID (passenger's number inside their group)\n",
+    "#According to kaggle, people in one group are often family members.\n",
+    "\n",
+    "group_train=np.array([])\n",
+    "group_id_train=np.array([])\n",
+    "group_test=np.array([])\n",
+    "group_id_test=np.array([])\n",
+    "for x in df_train.iloc[:,0]:\n",
+    "    np.append(group_train, int(x.split('_')[0]))\n",
+    "    np.append(group_id_train, int(x.split('_')[1]))\n",
+    "for x in df_xtest.iloc[:,0]:\n",
+    "    np.append(group_test, int(x.split('_')[0]))\n",
+    "    np.append(group_id_test, int(x.split('_')[1]))    \n",
+    "\n",
+    "\n",
+    "#Cabin number is divided into Deck/Number/Side, where Side can be either P for Port or S for Starboard. (explained in kaggle)\n",
+    "\n",
+    "deck_train=np.array([])\n",
+    "deck_test=np.array([])\n",
+    "num_train=np.array([])\n",
+    "num_test=np.array([])\n",
+    "side_train=np.array([])\n",
+    "side_test=np.array([])\n",
+    "for x in df_train.iloc[:,3]:\n",
+    "    if isinstance(x, float):\n",
+    "        np.append(deck_train,'0') #if there is a missing value, I assign '0' to deck, num and side\n",
+    "        np.append(num_train,'0')\n",
+    "        np.append(side_train,'0')\n",
+    "    else:\n",
+    "        np.append(deck_train, x.split('/')[0])\n",
+    "        np.append(num_train, int(x.split('/')[1]))\n",
+    "        np.append(side_train, x.split('/')[2])\n",
+    "for x in df_xtest.iloc[:,3]:\n",
+    "    if isinstance(x, float):\n",
+    "        np.append(deck_train,'0') \n",
+    "        np.append(num_train,'0')\n",
+    "        np.append(side_train,'0')\n",
+    "    else:\n",
+    "        np.append(deck_test, x.split('/')[0])\n",
+    "        np.append(num_test, int(x.split('/')[1]))\n",
+    "        np.append(side_test, x.split('/')[2])\n",
+    "\n",
+    "\n",
+    "xtrain=np.array([group_train,group_id_train,home_planet_train,df_train.iloc[:,2].values,deck_train,num_train,side_train,destination_train,df_train.iloc[:,5].values,\n",
+    "        df_train.iloc[:,6].values,df_train.iloc[:,7].values,df_train.iloc[:,8].values,df_train.iloc[:,9].values,df_train.iloc[:,10].values,df_train.iloc[:,11].values ])\n",
+    "xtrain\n"
    ]
   },
   {
