--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4         True  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,18 +542,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (640636866.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [7], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    nn.Linear()\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Network prototype\n",
     "class Network(nn.Module):\n",
@@ -561,7 +552,7 @@
     "        super().__init__()\n",
     "        \n",
     "        self.block1 = nn.Sequential(\n",
-    "            nn.Linear()\n",
+    "            nn.Linear(),\n",
     "            nn.BatchNorm2d(32),\n",
     "            nn.ReLU()\n",
     "        )\n",
@@ -582,6 +573,48 @@
     "        \n",
     "        return x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# defining our model\n",
+    "\n",
+    "input_dim = ?\n",
+    "output_dim = 2 # \"yes\" or \"no\"\n",
+    "model = Network(input_dim, output_dim)\n",
+    "\n",
+    "# configurating the net\n",
+    "\n",
+    "criterion = torch.nn.NLLLoss() # loss function (negative log-likelihood?)\n",
+    "learning_rate = 0.0003 # initial lr, internet says best for Adam\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr = learning_rate) # probably those adaptive gradients or something\n",
+    "# scheduler = ... I'll omit this line, because lr schedulers are important with SGD, and not so much with Adam\n",
+    "\n",
+    "# learning loop\n",
+    "\n",
+    "loss_list = []\n",
+    "iter_num = 100\n",
+    "\n",
+    "for iter in range(iter_num):\n",
+    "\n",
+    "    results = model.forward( input_data )    # calculate predictions\n",
+    "    loss = criterion(results, df_train[\"Transported\"])  # calculate loss\n",
+    "    loss_list.append(loss.detach().numpy())\n",
+    "    optimizer.zero_grad()                    # clear gradient of loss function\n",
+    "    loss.backward()                          # calculate gradient\n",
+    "    optimizer.step()                         # update parameters\n",
+    "\n",
+    "# plot loss function decay\n",
+    "\n",
+    "plt.plot(loss_list, range(iter_num), color = \"violet\")\n",
+    "plt.ylabel(\"Mean squared error\")\n",
+    "plt.xlabel(\"Iteration\")\n",
+    "plt.title(\"Loss function's decay\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -600,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
