--- a/main.ipynb
+++ b/main.ipynb
@@ -610,6 +610,7 @@
     "# plot loss function decay\n",
     "\n",
     "plt.plot(loss_list, range(iter_num), color = \"violet\")\n",
+    "plt.yscale(\"log\")\n",
     "plt.ylabel(\"Mean squared error\")\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.title(\"Loss function's decay\")\n",
