--- a/main.ipynb
+++ b/main.ipynb
@@ -521,13 +521,13 @@
     "df_xtest.iloc[:,6]=1*df_xtest.iloc[:,6]\n",
     "df_ytest.iloc[:,1]=1*df_ytest.iloc[:,1]\n",
     "\n",
-    "#normalize (divide) numeric values by their maximum value\n",
+    "#normalize numeric values by their maximum value\n",
     "for i in [5,7,8,9,10,11]:  \n",
     "    df_xtest.iloc[:,i] = df_xtest.iloc[:,i]/max(df_train.iloc[:,i])\n",
     "    df_train.iloc[:,i] = df_train.iloc[:,i]/max(df_train.iloc[:,i])\n",
     "\n",
     "\n",
-    "#Encoding data. We put into this function a list of categories we want to encode (e.g.planet names)\n",
+    "#Encoding data. I put into this function a list of categories we want to encode (e.g.planet names)\n",
     "def encoding(sequences, categories):\n",
     "  results = np.zeros((len(sequences), len(categories))) # Creates an all-zero matrix of shape (len(sequences), len(categories))\n",
     "  for i, sequence in enumerate(sequences): # Sets specific indices of results to 1\n",
@@ -598,7 +598,7 @@
     }
    ],
    "source": [
-    "#Passenger ID is divided into group number (describes the whole group) and group ID (passenger's number inside their group)\n",
+    "#Passenger ID is divided into group number (describing the whole group) and group ID (passenger's number inside their group)\n",
     "#According to kaggle, people in one group are often family members.\n",
     "\n",
     "group_train=np.array([])\n",
@@ -623,18 +623,18 @@
     "side_test=np.array([])\n",
     "for x in df_train.iloc[:,3]:\n",
     "    if isinstance(x, float):\n",
-    "        np.append(deck_train,'0') #if there is a missing value, I assign '0' to deck, num and side\n",
-    "        np.append(num_train,'0')\n",
-    "        np.append(side_train,'0')\n",
+    "        np.append(deck_train,np.nan) #if there's a missing value, I assign nan to deck, num and side (do we want to delete these points later?)\n",
+    "        np.append(num_train,np.nan) \n",
+    "        np.append(side_train,np.nan)\n",
     "    else:\n",
     "        np.append(deck_train, x.split('/')[0])\n",
     "        np.append(num_train, int(x.split('/')[1]))\n",
     "        np.append(side_train, x.split('/')[2])\n",
     "for x in df_xtest.iloc[:,3]:\n",
     "    if isinstance(x, float):\n",
-    "        np.append(deck_train,'0') \n",
-    "        np.append(num_train,'0')\n",
-    "        np.append(side_train,'0')\n",
+    "        np.append(deck_train,np.nan) \n",
+    "        np.append(num_train,np.nan)\n",
+    "        np.append(side_train,np.nan)\n",
     "    else:\n",
     "        np.append(deck_test, x.split('/')[0])\n",
     "        np.append(num_test, int(x.split('/')[1]))\n",
@@ -643,7 +643,8 @@
     "\n",
     "xtrain=np.array([group_train,group_id_train,home_planet_train,df_train.iloc[:,2].values,deck_train,num_train,side_train,destination_train,df_train.iloc[:,5].values,\n",
     "        df_train.iloc[:,6].values,df_train.iloc[:,7].values,df_train.iloc[:,8].values,df_train.iloc[:,9].values,df_train.iloc[:,10].values,df_train.iloc[:,11].values ])\n",
-    "xtrain\n"
+    "xtrain\n",
+    "#Create dataframe\n"
    ]
   },
   {
@@ -734,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov  4 2022, 13:42:51) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
