--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4         True  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,111 +545,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_6380\\532312657.py:44: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  xtrain=np.array([group_train,group_id_train,home_planet_train,df_train.iloc[:,2].values,deck_train,num_train,side_train,destination_train,df_train.iloc[:,5].values,\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([array([], dtype=float64), array([], dtype=float64),\n",
-       "       array([[1., 0., 0.],\n",
-       "              [0., 1., 0.],\n",
-       "              [1., 0., 0.],\n",
-       "              ...,\n",
-       "              [0., 1., 0.],\n",
-       "              [1., 0., 0.],\n",
-       "              [1., 0., 0.]]),\n",
-       "       array([0, 0, 0, ..., 0, 0, 0], dtype=object),\n",
-       "       array([], dtype=float64), array([], dtype=float64),\n",
-       "       array([], dtype=float64), array([[1., 0., 0.],\n",
-       "                                        [1., 0., 0.],\n",
-       "                                        [1., 0., 0.],\n",
-       "                                        ...,\n",
-       "                                        [1., 0., 0.],\n",
-       "                                        [0., 0., 1.],\n",
-       "                                        [1., 0., 0.]]),\n",
-       "       array([0.49367089, 0.30379747, 0.73417722, ..., 0.32911392, 0.40506329,\n",
-       "              0.55696203])                                                    ,\n",
-       "       array([0, 0, 1, ..., 0, 0, 0], dtype=object),\n",
-       "       array([0.        , 0.00760801, 0.00300133, ..., 0.        , 0.        ,\n",
-       "              0.00879458])                                                    ,\n",
-       "       array([0.        , 0.00030188, 0.11994767, ..., 0.        , 0.03518599,\n",
-       "              0.15724684])                                                    ,\n",
-       "       array([0.        , 0.00106419, 0.        , ..., 0.0796867 , 0.        ,\n",
-       "              0.        ])                                                    ,\n",
-       "       array([0.00000000e+00, 2.45001785e-02, 2.99669761e-01, ...,\n",
-       "              4.46269190e-05, 1.57533024e-02, 0.00000000e+00])    ,\n",
-       "       array([0.        , 0.00182323, 0.00203041, ..., 0.        , 0.13404881,\n",
-       "              0.00049724])                                                    ],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Passenger ID is divided into group number (describing the whole group) and group ID (passenger's number inside their group)\n",
     "#According to kaggle, people in one group are often family members.\n",
-    "\n",
-    "group_train=np.array([])\n",
-    "group_id_train=np.array([])\n",
-    "group_test=np.array([])\n",
-    "group_id_test=np.array([])\n",
-    "for x in df_train.iloc[:,0]:\n",
-    "    np.append(group_train, int(x.split('_')[0]))\n",
-    "    np.append(group_id_train, int(x.split('_')[1]))\n",
+    "group_train=[]\n",
+    "group_id_train=[]\n",
+    "group_test=[]\n",
+    "group_id_test=[]\n",
+    "for x in df_train.iloc[:,0].values:\n",
+    "    group_train.append(int(x.split('_')[0]))\n",
+    "    group_id_train.append(int(x.split('_')[1]))\n",
     "for x in df_xtest.iloc[:,0]:\n",
-    "    np.append(group_test, int(x.split('_')[0]))\n",
-    "    np.append(group_id_test, int(x.split('_')[1]))    \n",
+    "    group_test.append(int(x.split('_')[0]))\n",
+    "    group_id_test.append(int(x.split('_')[1]))    \n",
+    "group_train=np.array(group_train)\n",
+    "group_id_train=np.array(group_id_train)\n",
+    "group_test=np.array(group_test)\n",
+    "group_id_test=np.array(group_id_test)\n",
     "\n",
     "\n",
     "#Cabin number is divided into Deck/Number/Side, where Side can be either P for Port or S for Starboard. (explained in kaggle)\n",
-    "\n",
-    "deck_train=np.array([])\n",
-    "deck_test=np.array([])\n",
-    "num_train=np.array([])\n",
-    "num_test=np.array([])\n",
-    "side_train=np.array([])\n",
-    "side_test=np.array([])\n",
-    "for x in df_train.iloc[:,3]:\n",
+    "deck_train=[]\n",
+    "deck_test=[]\n",
+    "num_train=[]\n",
+    "num_test=[]\n",
+    "side_train=[]\n",
+    "side_test=[]\n",
+    "for x in df_train.iloc[:,3].values:\n",
     "    if isinstance(x, float):\n",
-    "        np.append(deck_train,np.nan) #if there's a missing value, I assign nan to deck, num and side (do we want to delete these points later?)\n",
-    "        np.append(num_train,np.nan) \n",
-    "        np.append(side_train,np.nan)\n",
+    "        deck_train.append(np.nan) #if there's a missing value, I assign nan to deck, num and side (do we want to delete these points later?)\n",
+    "        num_train.append(np.nan) \n",
+    "        side_train.append(np.nan)\n",
     "    else:\n",
-    "        np.append(deck_train, x.split('/')[0])\n",
-    "        np.append(num_train, int(x.split('/')[1]))\n",
-    "        np.append(side_train, x.split('/')[2])\n",
+    "        deck_train.append(x.split('/')[0])\n",
+    "        num_train.append(int(x.split('/')[1]))\n",
+    "        side_train.append(x.split('/')[2])\n",
     "for x in df_xtest.iloc[:,3]:\n",
     "    if isinstance(x, float):\n",
-    "        np.append(deck_train,np.nan) \n",
-    "        np.append(num_train,np.nan)\n",
-    "        np.append(side_train,np.nan)\n",
+    "        deck_train.append(np.nan) \n",
+    "        num_train.append(np.nan)\n",
+    "        side_train.append(np.nan)\n",
     "    else:\n",
-    "        np.append(deck_test, x.split('/')[0])\n",
-    "        np.append(num_test, int(x.split('/')[1]))\n",
-    "        np.append(side_test, x.split('/')[2])\n",
+    "        deck_test.append( x.split('/')[0])\n",
+    "        num_test.append(int(x.split('/')[1]))\n",
+    "        side_test.append( x.split('/')[2])\n",
+    "num_train=np.array(num_train)\n",
+    "num_test=np.array(num_test)\n",
+    "deck_train=encoding(deck_train,['A','B','C','D','E','F','G','T'])\n",
+    "deck_test=encoding(deck_test,['A','B','C','D','E','F','G','T'])\n",
+    "side_train=encoding(side_train,['P','S'])\n",
+    "side_test=encoding(side_test,['P','S'])\n",
     "\n",
     "\n",
+    "#I put all of data into an array of arrays \n",
     "xtrain=np.array([group_train,group_id_train,home_planet_train,df_train.iloc[:,2].values,deck_train,num_train,side_train,destination_train,df_train.iloc[:,5].values,\n",
-    "        df_train.iloc[:,6].values,df_train.iloc[:,7].values,df_train.iloc[:,8].values,df_train.iloc[:,9].values,df_train.iloc[:,10].values,df_train.iloc[:,11].values ])\n",
-    "xtrain\n",
-    "#Create dataframe\n"
+    "        df_train.iloc[:,6].values,df_train.iloc[:,7].values,df_train.iloc[:,8].values,df_train.iloc[:,9].values,df_train.iloc[:,10].values,df_train.iloc[:,11].values ],dtype=object)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov  4 2022, 13:42:51) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
