--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "2        False  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,37 +222,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (640636866.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn [6], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    nn.BatchNorm2d(32),\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Network prototype\n",
     "class model_block(torch.nn.Module):\n",
     "    def __init__(self, D_in, H, D_out):\n",
     "        super(model_block, self).__init__()\n",
-    "        self.linear1 = torch.nn.Linear(D_in, H)\n",
-    "        self.linear2 = torch.nn.Linear(H, D_out)\n",
+    "        self.linear1 = nn.Linear(D_in, H)\n",
+    "        self.linear2 = nn.Linear(H, D_out)\n",
     "    def forward(self, x):\n",
     "        y = self.linear1(x)\n",
     "        y = F.relu(y)\n",
-    "        y = self.linear2(x)\n",
+    "        y = self.linear2(y)\n",
     "        y = F.relu(y)\n",
     "        return y\n",
     "\n",
     "class Net(torch.nn.Module):\n",
-    "    def __init__(self, D_in1, H1, D_out1, D_in2, H2, D_out2):\n",
+    "    def __init__(self, D_in1, H1, D_out1, H2, D_out2):\n",
     "        super(Net, self).__init__()\n",
-    "        self.block1 = model_block(D_in1, H1, D_out1)\n",
-    "        self.block2 = model_block(D_in2, H2, D_out2)\n",
+    "        self.block1 = model_block(D_in1, H1, D_out1).double()\n",
+    "        self.block2 = model_block(D_out1, H2, D_out2).double()\n",
     "\n",
     "    def forward(self, x):\n",
     "        y = self.block1(x)\n",
@@ -260,8 +251,46 @@
     "        return y\n",
     "\n",
     "input_num = 4\n",
-    "output_num = 1"
+    "output_num = 1\n",
+    "model = Net(10, 100, 80, 100, 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([37.9451, 48.7049, 80.7785, 78.8331, 12.9710, 21.4705, 87.9543, 73.8699,\n",
+      "        16.0395, 70.0528], dtype=torch.float64, requires_grad=True)\n",
+      "tensor([0.9705], dtype=torch.float64, grad_fn=<ReluBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = np.random.uniform(10,100,10)\n",
+    "x = torch.tensor(s,requires_grad=True, dtype=torch.double)\n",
+    "\n",
+    "print(x)\n",
+    "print(model(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
