--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4         True  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,6 +535,7 @@
     "        if sequence==categories[j]:\n",
     "            results[i,j]=1\n",
     "  return np.array(results)\n",
+    "  #można zrobić opymalniej\n",
     "\n",
     "home_planet_train=encoding(df_train.iloc[:,1],['Europa','Earth','Mars'])\n",
     "home_planet_test=encoding(df_xtest.iloc[:,1],['Europa','Earth','Mars'])\n",
@@ -545,9 +546,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 1.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 1. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "#Passenger ID is divided into group number (describing the whole group) and group ID (passenger's number inside their group)\n",
     "#According to kaggle, people in one group are often family members.\n",
@@ -602,12 +617,14 @@
     "\n",
     "#I put all of data into an array of arrays \n",
     "xtrain=np.array([group_train,group_id_train,home_planet_train,df_train.iloc[:,2].values,deck_train,num_train,side_train,destination_train,df_train.iloc[:,5].values,\n",
-    "        df_train.iloc[:,6].values,df_train.iloc[:,7].values,df_train.iloc[:,8].values,df_train.iloc[:,9].values,df_train.iloc[:,10].values,df_train.iloc[:,11].values ],dtype=object)"
+    "        df_train.iloc[:,6].values,df_train.iloc[:,7].values,df_train.iloc[:,8].values,df_train.iloc[:,9].values,df_train.iloc[:,10].values,df_train.iloc[:,11].values ],dtype=object)\n",
+    "\n",
+    "print(home_planet_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
