--- a/main.ipynb
+++ b/main.ipynb
@@ -536,6 +536,7 @@
     "            results[i,j]=1\n",
     "  return np.array(results)\n",
     "  #można zrobić opymalniej\n",
+    "  #można dać całe encodowanie do funkcji i wywołać ją na danych testowych i treningowych\n",
     "\n",
     "home_planet_train=encoding(df_train.iloc[:,1],['Europa','Earth','Mars'])\n",
     "home_planet_test=encoding(df_xtest.iloc[:,1],['Europa','Earth','Mars'])\n",
@@ -710,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov  4 2022, 13:42:51) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
