--- a/main.ipynb
+++ b/main.ipynb
@@ -580,41 +580,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# defining our model\n",
+    "def train(network , train_data, test_data, test=False, iter_num=10): # przerowbic na funkcje (TODO), dane w postacie np.array jak narazie jak skończysz to powiedz to przerowbimy na torch.tensor\n",
+    "        # defining our model\n",
     "\n",
-    "input_dim = ?\n",
-    "output_dim = 2 # \"yes\" or \"no\"\n",
-    "model = Network(input_dim, output_dim)\n",
+    "        input_dim = ?\n",
+    "        output_dim = 1 # \"yes\" or \"no\"\n",
+    "        model = Network(input_dim, output_dim)\n",
     "\n",
-    "# configurating the net\n",
+    "        # configurating the net\n",
     "\n",
-    "criterion = torch.nn.NLLLoss() # loss function (negative log-likelihood?)\n",
-    "learning_rate = 0.0003 # initial lr, internet says best for Adam\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr = learning_rate) # probably those adaptive gradients or something\n",
-    "# scheduler = ... I'll omit this line, because lr schedulers are important with SGD, and not so much with Adam\n",
+    "        criterion = torch.nn.NLLLoss() # loss function (negative log-likelihood?) #cross entropy loss (?) (TODO)\n",
+    "        learning_rate = 3e-4 # initial lr, internet says best for Adam\n",
+    "        optimizer = torch.optim.Adam(model.parameters(), lr = learning_rate) # probably those adaptive gradients or something\n",
+    "        # scheduler = ... I'll omit this line, because lr schedulers are important with SGD, and not so much with Adam\n",
     "\n",
-    "# learning loop\n",
+    "        # learning loop\n",
     "\n",
-    "loss_list = []\n",
-    "iter_num = 100\n",
+    "        loss_list = []\n",
+    "        iter_num = 100\n",
+    "        y = df_train[\"Transported\"]\n",
+    "        x = input_data\n",
+    "        for iter in range(iter_num):\n",
     "\n",
-    "for iter in range(iter_num):\n",
+    "                optimizer.zero_grad()                    # clear gradient of loss function\n",
+    "                results = model(x)  # calculate predictions\n",
+    "                loss = criterion(results, y)  # calculate loss\n",
+    "                loss_list.append(loss.detach().numpy())\n",
+    "                loss.backward()                          # calculate gradient\n",
+    "                optimizer.step()                         # update parameters\n",
+    "                \n",
+    "                #if iter % 100:\n",
+    "                        #liczyć model na danych testowych i na podstawie tego zbierac loss z test data i plotowac, możesz zrobić na końcu\n",
     "\n",
-    "    results = model.forward( input_data )    # calculate predictions\n",
-    "    loss = criterion(results, df_train[\"Transported\"])  # calculate loss\n",
-    "    loss_list.append(loss.detach().numpy())\n",
-    "    optimizer.zero_grad()                    # clear gradient of loss function\n",
-    "    loss.backward()                          # calculate gradient\n",
-    "    optimizer.step()                         # update parameters\n",
+    "        # plot loss function decay\n",
     "\n",
-    "# plot loss function decay\n",
-    "\n",
-    "plt.plot(loss_list, range(iter_num), color = \"violet\")\n",
-    "plt.yscale(\"log\")\n",
-    "plt.ylabel(\"Mean squared error\")\n",
-    "plt.xlabel(\"Iteration\")\n",
-    "plt.title(\"Loss function's decay\")\n",
-    "plt.show()"
+    "        plt.plot(loss_list, range(iter_num), color = \"violet\")\n",
+    "        plt.yscale(\"log\")\n",
+    "        plt.ylabel(\"Mean squared error\")\n",
+    "        plt.xlabel(\"Iteration\")\n",
+    "        plt.title(\"Loss function's decay\")\n",
+    "        plt.show()\n",
+    "        \n",
+    "        return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train(Network, )"
    ]
   }
  ],
