--- a/main.ipynb
+++ b/main.ipynb
@@ -232,6 +232,7 @@
     "        super(model_block, self).__init__()\n",
     "        self.linear1 = nn.Linear(D_in, H)\n",
     "        self.linear2 = nn.Linear(H, D_out)\n",
+    "        \n",
     "    def forward(self, x):\n",
     "        y = self.linear1(x)\n",
     "        y = F.relu(y)\n",
@@ -290,7 +291,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train(Network, )"
+   ]
   }
  ],
  "metadata": {
