--- a/main.ipynb
+++ b/main.ipynb
@@ -580,6 +580,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#y = df_train[\"Transported\"]\n",
+    "#x = input_data\n",
+    "train_data=(input_data, df_train[\"Transported\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def train(network , train_data, test_data, test=False, iter_num=10): # przerowbic na funkcje (TODO), dane w postacie np.array jak narazie jak skończysz to powiedz to przerowbimy na torch.tensor\n",
     "        # defining our model\n",
     "\n",
@@ -596,19 +607,19 @@
     "\n",
     "        # learning loop\n",
     "\n",
+    "\n",
     "        loss_list = []\n",
     "        iter_num = 100\n",
-    "        y = df_train[\"Transported\"]\n",
-    "        x = input_data\n",
     "        for iter in range(iter_num):\n",
-    "\n",
-    "                optimizer.zero_grad()                    # clear gradient of loss function\n",
-    "                results = model(x)  # calculate predictions\n",
-    "                loss = criterion(results, y)  # calculate loss\n",
-    "                loss_list.append(loss.detach().numpy())\n",
-    "                loss.backward()                          # calculate gradient\n",
-    "                optimizer.step()                         # update parameters\n",
-    "                \n",
+    "                print(f'epoch nr {iter}')\n",
+    "                for x, y in train_data: #poprawić\n",
+    "                        optimizer.zero_grad()                    # clear gradient of loss function\n",
+    "                        results = model(x)  # calculate predictions\n",
+    "                        loss = criterion(results, y)  # calculate loss\n",
+    "                        loss_list.append(loss.detach().numpy())\n",
+    "                        loss.backward()                          # calculate gradient\n",
+    "                        optimizer.step()                         # update parameters\n",
+    "                        \n",
     "                #if iter % 100:\n",
     "                        #liczyć model na danych testowych i na podstawie tego zbierac loss z test data i plotowac, możesz zrobić na końcu\n",
     "\n",
@@ -623,6 +634,13 @@
     "        \n",
     "        return model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
