--- a/main.ipynb
+++ b/main.ipynb
@@ -547,31 +547,33 @@
    "outputs": [],
    "source": [
     "# Network prototype\n",
-    "class Network(nn.Module):\n",
-    "    def __init__(self, in_c, n_classes):\n",
-    "        super().__init__()\n",
-    "        \n",
-    "        self.block1 = nn.Sequential(\n",
-    "            nn.Linear(),\n",
-    "            nn.BatchNorm2d(32),\n",
-    "            nn.ReLU()\n",
-    "        )\n",
-    "              \n",
-    "        #self.decoder = nn.Sequential(\n",
-    "        #    nn.Linear(32 * 28 * 28, 1024),\n",
-    "        #    nn.Sigmoid(),\n",
-    "        #    nn.Linear(1024, n_classes)\n",
-    "        #)\n",
-    "\n",
+    "class model_block(torch.nn.Module):\n",
+    "    def __init__(self, D_in, H, D_out):\n",
+    "        super(model_block, self).__init__()\n",
+    "        self.linear1 = nn.Linear(D_in, H)\n",
+    "        self.linear2 = nn.Linear(H, D_out)\n",
     "        \n",
     "    def forward(self, x):\n",
-    "        x = self.block1(x)\n",
+    "        y = self.linear1(x)\n",
+    "        y = F.relu(y)\n",
+    "        y = self.linear2(y)\n",
+    "        y = F.relu(y)\n",
+    "        return y\n",
     "\n",
-    "        x = x.view(x.size(0), -1) # flat\n",
-    "        \n",
-    "        #x = self.decoder(x)\n",
-    "        \n",
-    "        return x"
+    "class Net(torch.nn.Module):\n",
+    "    def __init__(self, D_in1, H1, D_out1, H2, D_out2):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.block1 = model_block(D_in1, H1, D_out1).double()\n",
+    "        self.block2 = model_block(D_out1, H2, D_out2).double()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        y = self.block1(x)\n",
+    "        y = self.block2(y)\n",
+    "        return y\n",
+    "\n",
+    "input_num = 4\n",
+    "output_num = 1\n",
+    "#model = Net(10, 100, 80, 100, 1) przykładowe wywolanie"
    ]
   },
   {
